<resources>
    <string name="app_name">GithubUserTraining</string>
    <string name="q_following">following</string>
    <string name="q_followers">followers</string>
    <string name="cari">Cari</string>
    <string name="t_setting">Setting</string>
    <string name="username_hint">Masukkan Username</string>
    <string name="followers">Follower\n</string>
    <string name="Nama">Name</string>
    <string name="angka">0</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">username</string>
    <string name="re_status">status</string>
    <string name="task_progress">Sedang Loading</string>
    <string name="task_completed">Completed</string>
    <string name="loading">Compresssing %d %%</string>
    <string name="user_not_found">User not Found</string>
    <string name="search">Pencarian</string>
    <string name="user_None">User Tidak Ditemukan</string>
    <string name="following">Following\n</string>
    <string name="Favorite">Favorite</string>
    <string name="dark_mode">Mode Gelap\n</string>
    <string name="mode">Pilih Mode</string>
    <string name="theme">Ganti Tema\n</string>
    <string name="add">Add</string>
    <string name="tombol_unused"> silahkan kembali ke halaman sebelumnya dan menekan kembali tombol yang hilang</string>
    <string name="remove">Remove</string>
</resources>